[package]
name = "rnes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrayvec = "0.7.6"
bitflags = "2.10.0"
clap = { version = "4.5.59", features = ["derive"] }
cpal = "0.17.3"
futures = "0.3.31"
gilrs = "0.11.1"
pixels = "0.15.0"
winit = "0.29"
winit_input_helper = "0.15"

[profile.release]
debug = true
